Init CXF extension
Add cxf server side extension
Docs
Unit tests

fix #4005

Co-authored-by: Olivier Dufour <olivier.duff@gmail.com>
Co-authored-by: Guillaume Dufour <guillaume.duff@gmail.com>

--- a/docs/src/main/asciidoc/index.adoc
+++ b/docs/src/main/asciidoc/index.adoc
@@ -60,6 +60,7 @@ include::quarkus-intro.adoc[tag=intro]
 * link:jms.html[Using Artemis JMS Client]
 * link:reactive-routes.adoc[Using Reactive Routes]
 * link:camel.adoc[Apache Camel]
+* link:soap-web-service-guide.html[Writing SOAP Web Services]
 
 * link:faq.html[FAQs]
 
