--- a/docs/src/main/asciidoc/writing-extensions.adoc
+++ b/docs/src/main/asciidoc/writing-extensions.adoc
@@ -1290,6 +1290,143 @@ HealthBuildItem addHealthCheck(AgroalBuildTimeConfig agroalBuildTimeConfig) {
 }
 ----
 
+=== Extension Metrics
+
+An extension can decide to provide metrics through the `quarkus-smallrye-metrics` extension.
+A typical use case for this would be that an extension scans the application code for relevant components (like entities, messaging endpoints, etc.)
+and creates a set of metrics for each of these components. A unified mechanism for metric registration is provided via the `MetricBuildItem` class
+provided by the `quarkus-smallrye-metrics-spi` module.
+
+There are several distinct situations that can occur and each requires slightly different handling:
+
+1. The underlying library used by your extension is using the MicroProfile Metrics API directly.
+2. The underlying library uses its own way for collecting metrics and makes them available at runtime using its own API.
+3. The underlying library does not provide metrics (or there is no library at all) and you need to insert some code in the extension's codebase that will collect the metrics.
+
+What is common for all cases is that the extension should have a build-time config property that enables metrics exposure for the extension,
+it should be named `quarkus.<extension>.metrics.enabled` and be `false` by default.
+
+==== Case 1: The library uses MP Metrics
+If the library exposes metrics by itself, we don't have to do much. However, there are a few points to consider:
+
+- It should be possible to disable all metrics for an extension, which can be a bit problematic if the library registers them directly
+rather than through the unified registration mechanism in the `quarkus-smallrye-metrics-spi` module. Therefore the library should contain
+a way to turn all metrics off, for example using a library-specific system property that can be set during build time (by emitting a `SystemPropertyBuildItem`),
+and will disable metrics if at least one of the properties `quarkus.<extensionName>.metrics.enabled` and `quarkus.smallrye-metrics.extensions.enabled` is `false`.
+- It is desirable to be able to omit the MP Metrics dependency at runtime, so if possible, the library should be written in a way that
+it will still work when the MP Metrics dependencies (or at least the implementation, `io.smallrye:smallrye-metrics`) are unavailable. This can be achieved by
+wrapping all code that does something metric-related into an `if` condition that checks whether metrics integration is enabled. If the library performs injections
+of the `MetricRegistry`, which is not avoidable by introducing an `if` condition, it will unfortunately not be possible to remove the `microprofile-metrics` dependency,
+but it is still possible to avoid the need for `smallrye-metrics` (which contains the implementation class of the metric registry) by introducing a custom "no-op"
+implementation of the `MetricRegistry` which can, for example, return `null` from all its methods. This no-op implementation should be added to the application's classes
+so that it can be injected instead of the regular `io.smallrye.metrics.MetricRegistryImpl`. An example of a no-op implementation can be found at
+https://github.com/quarkusio/quarkus/blob/master/extensions/smallrye-fault-tolerance/runtime/src/main/java/io/quarkus/smallrye/faulttolerance/runtime/NoopMetricRegistry.java[NoopMetricRegistry]
+
+==== Case 2: The library provides its own metric API
+In this case, the extension can make use of the `quarkus-smallrye-metrics-spi` module to expose the metrics from the library using MP Metrics.
+
+You should do the following:
+
+- Import the `quarkus-smallrye-metrics-spi` library in your deployment module.
+- Import the `quarkus-smallrye-metrics` extension as an **optional** dependency in your runtime module so it will not impact the size of the application if
+metrics are not included.
+- In your processor, produce any number of `MetricBuildItem` items as shown in the example below.
+The metric name of all metrics should start with a short name of the extension that owns them.
+- Pass the value of `quarkus.<extension>.metrics.enabled` to the constructor of `MetricBuildItem` objects that the extension produces and if it is false, the metric will be ignored.
+
+An example build step for build-time registration of metrics:
+
+[source%nowrap.java]
+----
+@BuildStep
+void registerMetrics(BuildProducer<MetricBuildItem> metrics) {
+    Metadata activeCountMetadata = Metadata.builder()
+            .withName("agroal.active.count")
+            .withDescription("Count of active connections")
+            .withType(MetricType.GAUGE)
+            .build();
+    List<DataSource> dataSources = getAllDataSources(); // your relevant components specific to the extension
+    for(DataSource dataSource : dataSources) {
+        metrics.produce(new MetricBuildItem(activeCountMetadata,
+                new ActiveCountGauge(dataSource.getName()),
+                agroalBuildTimeConfig.metricsEnabled,
+                configRootName, // name of the config root pertaining to this extension
+                new Tag("datasource", dataSource.getName())));
+    }
+}
+----
+
+In this example, there is a gauge per each data source that shows the current number of active connections.
+In this example, we provide an object that implements the logic of the metric, in the case of a gauge,
+it needs to implement `org.eclipse.microprofile.metrics.Gauge`. Example:
+
+[source%nowrap.java]
+----
+public class ActiveCountGauge implements Gauge<Long> {
+
+    private String dataSourceName;
+
+    public ActiveCountGauge() {
+
+    }
+
+    public ActiveCountGauge(String dataSourceName) {
+        this.dataSourceName = dataSourceName;
+    }
+
+    @Override
+    public Long getValue() {
+        DataSource ds = obtainDataSource(dataSourceName); // some logic to get hold of the data source
+        return ds.getMetrics().getActiveCount();
+    }
+}
+----
+
+When registering gauges, it is required to provide a custom object that implements the correct metric type.
+For metric types other than gauges, this is optional - you can choose whether to provide an implementation,
+or whether the default implementation class from `SmallRye Metrics` should be instantiated for the metric and registered
+in the metric registry. To update the metric value, it will be necessary to look them up in the metric registry
+and call the methods specific to each metric type.
+
+Look into the `AgroalProcessor#registerMetrics` method for an example how this was done for the Agroal extension.
+
+==== Case 3: It is necessary to collect metrics within the extension code
+
+In this case, the dependency setup and build-time registration is the same as in case 2. The difference will be that instead of introducing
+custom metric objects that bridge between library-specific metrics and MP Metrics, the extension's code will contain metric collection code like this:
+
+[source%nowrap.java]
+----
+public void methodThatShouldBeCounted() {
+    if(metricsEnabled) {
+        Counter counter = MetricRegistries.get(MetricRegistry.Type.VENDOR).counter("name");
+        counter.inc();
+    }
+    // proceed with the invocation normally
+}
+----
+
+In this case, be aware that the MP Metrics API and implementation might not be available on the runtime classpath!
+This is why there is a `if(metricsEnabled)` check that should make sure that if metrics are not enabled, we don't touch MP Metrics classes,
+because that would fail. The extension itself will need to provide such check, and it must return true only if both of these conditions hold:
+
+- The Metrics capability is present and therefore the SmallRye Metrics library is available
+- Metrics are not disabled for this extension
+
+The recommended way to implement this check would be to produce a specific `SystemPropertyBuildItem` during build, which will make it easy
+to evaluate these two conditions, and then check back to this system property at runtime. Example:
+
+----
+@BuildStep
+SystemPropertyBuildItem produceMetricsEnabledProperty(AgroalBuildTimeConfig extensionSpecificConfig,
+        Capabilities capabilities) {
+    return new SystemPropertyBuildItem("metrics.enabled",
+            String.valueOf(capabilities.isCapabilityPresent(Capabilities.METRICS) &&
+                            extensionSpecificConfig.metricsEnabled));
+}
+----
+
+
 === Customizing JSON handling from an extension
 Extensions often need to register serializers and/or deserializers for types the extension provides.
 
