Update to Neo4j 4.0.0 driver, add more information to health check.

--- a/docs/src/main/asciidoc/neo4j.adoc
+++ b/docs/src/main/asciidoc/neo4j.adoc
@@ -4,7 +4,7 @@ and pull requests should be submitted there:
 https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 ////
 = Quarkus - Neo4j
-:neo4j_version: 3.5.6
+:neo4j_version: 3.5.13
 
 include::./attributes.adoc[]
 :extension-status: preview
@@ -429,7 +429,7 @@ Please add the following dependency management and dependency to your `pom.xml`
       <dependency>
           <groupId>io.projectreactor</groupId>
           <artifactId>reactor-bom</artifactId>
-          <version>Californium-SR4</version>
+          <version>Dysprosium-RELEASE</version>
           <type>pom</type>
           <scope>import</scope>
       </dependency>
@@ -460,7 +460,7 @@ import javax.ws.rs.core.MediaType;
 
 import org.neo4j.driver.Driver;
 import org.neo4j.driver.reactive.RxSession;
-import org.neo4j.driver.reactive.RxStatementResult;
+import org.neo4j.driver.reactive.RxResult;
 import org.reactivestreams.Publisher;
 
 import reactor.core.publisher.Flux;
@@ -477,7 +477,7 @@ public class ReactiveFruitResource {
     @Produces(MediaType.SERVER_SENT_EVENTS)
     public Publisher<String> get() {
         return Flux.using(driver::rxSession, session -> session.readTransaction(tx -> {
-            RxStatementResult result = tx.run("MATCH (f:Fruit) RETURN f.name as name ORDER BY f.name");
+            RxResult result = tx.run("MATCH (f:Fruit) RETURN f.name as name ORDER BY f.name");
             return Flux.from(result.records()).map(record -> record.get("name").asString());
         }), RxSession::close);
     }
