--- a/docs/src/main/asciidoc/amazon-lambda-http.adoc
+++ b/docs/src/main/asciidoc/amazon-lambda-http.adoc
@@ -185,6 +185,12 @@ It should give you something like the following output:
 
 The `OutputValue` attribute is the root URL for your lambda. Copy it to your browser and add `hello` at the end.
 
+[NOTE]
+Responses for binary types will be automatically encoded with base64.  This is different than the behavior using
+`quarkus:dev` which will return the raw bytes.  Amazon's API has additional restrictions requiring the base64 encoding.
+In general, client code will automatically handle this encoding but in certain custom situations, you should be aware
+you may need to manually manage that encoding.
+
 == Examine the POM
 
 If you want to adapt an existing Resteasy, Undertow, or Vert.x Web project to Amazon Lambda, there's a couple
