--- a/docs/src/main/asciidoc/logging-sentry.adoc
+++ b/docs/src/main/asciidoc/logging-sentry.adoc
@@ -17,11 +17,14 @@ include::{generated-dir}/config/quarkus-logging-sentry.adoc[opts=optional, level
 
 == Description
 
+
 Sentry is a really easy way to be notified of errors happening on you Quarkus application.
 
-It is a Open Source, Self-hosted and cloud-based error monitoring that helps software teams discover, triage, and prioritize errors in real-time.
+It is a self-hosted and cloud-based error monitoring that helps software teams discover, triage, and prioritize errors in real-time.
 
 They offer a free starter price for cloud-based or you can self host it for free.
+
+WARNING: Sentry's Java SDK is open source, but recently sentry.io https://blog.sentry.io/2019/11/06/relicensing-sentry[changed the license] for their backend to the non-open source BSL license. This might or might not be an issue for your project and product.
 
 == Configuration
 
