Typo fix in Neo4j guide

--- a/docs/src/main/asciidoc/neo4j.adoc
+++ b/docs/src/main/asciidoc/neo4j.adoc
@@ -284,9 +284,9 @@ public CompletionStage<Response> create(Fruit fruit) {
         )
         .thenCompose(fn -> fn.singleAsync())
         .thenApply(record -> Fruit.from(record.get("f").asNode()))
-        .thenCompose(persistedFruid -> session.closeAsync().thenApply(signal -> persistedFruid))
-        .thenApply(persistedFruid -> Response
-            .created(URI.create("/fruits/" + persistedFruid.id))
+        .thenCompose(persistedFruit -> session.closeAsync().thenApply(signal -> persistedFruit))
+        .thenApply(persistedFruit -> Response
+            .created(URI.create("/fruits/" + persistedFruit.id))
             .build()
         );
 }
