Allow multiple caching annotations on a single method

--- a/docs/src/main/asciidoc/cache.adoc
+++ b/docs/src/main/asciidoc/cache.adoc
@@ -277,8 +277,6 @@ See the parameter Javadoc for more details.
 
 This annotation cannot be used on a method returning `void`.
 
-You can only use one of the cache operations (and this annotation) on a given method: `@CacheResult`, `@CacheInvalidate` or `@CacheInvalidateAll`.
-
 === @CacheInvalidate
 
 Removes an entry from the cache.
@@ -288,8 +286,6 @@ If the method has one or more arguments, the key computation is done from all th
 This annotation can also be used on a method with no arguments, a default key derived from the cache name is generated in that case.
 If the key does not identify any cache entry, nothing will happen.
 
-You can only use one of the cache operations (and this annotation) on a given method: `@CacheResult`, `@CacheInvalidate` or `@CacheInvalidateAll`.
-
 [TIP]
 ====
 If the `@CacheResult` or `@CacheInvalidate` annotations are used on a method with no parameters, a unique default cache key derived from the cache name will be generated and used.
@@ -298,8 +294,6 @@ If the `@CacheResult` or `@CacheInvalidate` annotations are used on a method wit
 === @CacheInvalidateAll
 
 When a method annotated with `@CacheInvalidateAll` is invoked, Quarkus will remove all entries from the cache.
-
-You can only use one of the cache operations (and this annotation) on a given method: `@CacheResult`, `@CacheInvalidate` or `@CacheInvalidateAll`.
 
 === @CacheKey
 
@@ -352,7 +346,7 @@ import io.quarkus.cache.CacheInvalidateAll;
 import io.quarkus.cache.CacheResult;
 
 @ApplicationScoped
-public class CachedBean {
+public class CachedService {
 
     @CacheResult(cacheName = "foo")
     public Object load(Object key) { <1>
@@ -432,3 +426,34 @@ public class CachedService {
 }
 ----
 <1> A unique default cache key derived from the cache name is generated and used.
+
+=== Multiple annotations on a single method
+
+[source,java]
+----
+package org.acme.caching;
+
+import javax.inject.Singleton;
+
+import io.quarkus.cache.CacheInvalidate;
+import io.quarkus.cache.CacheInvalidateAll;
+import io.quarkus.cache.CacheResult;
+
+@Singleton
+public class CachedService {
+
+    @CacheInvalidate(cacheName = "foo")
+    @CacheResult(cacheName = "foo")
+    public String forceCacheEntryRefresh(Object key) { <1>
+        // Call expensive service here.
+    }
+
+    @CacheInvalidateAll(cacheName = "foo")
+    @CacheInvalidateAll(cacheName = "bar")
+    public void multipleInvalidateAll(Object key) { <2>
+    }
+}
+----
+<1> This method can be used to force a refresh of the cache entry corresponding to the given key. 
+<2> This method will invalidate all entries from the `foo` and `bar` caches with a single call.
+
