--- a/docs/src/main/asciidoc/getting-started.adoc
+++ b/docs/src/main/asciidoc/getting-started.adoc
@@ -224,7 +224,7 @@ $ curl -w "\n" http://localhost:8080/hello
 hello
 ```
 
-Hit `CTRL+C` to stop the application, but you can also keep it running and enjoy the blazing fast hot-reload.
+Hit `CTRL+C` to stop the application, or keep it running and enjoy the blazing fast hot-reload.
 
 [TIP]
 .Automatically add newline with `curl -w "\n"`
@@ -464,7 +464,7 @@ The async version of the code is available in the {quickstarts-base-url}[GitHub]
 
 This guide covered the creation of an application using Quarkus.
 However, there is much more.
-We recommend continuing the journey with the link:building-native-image[building a native executable guide], where you learn about the native executable creation and the packaging in a container.
+We recommend continuing the journey with the link:building-native-image[building a native executable guide], where you learn about creating a native executable and packaging it in a container.
 
 In addition, the link:tooling[tooling guide] document explains how to:
 
