Update to smallrye-jwt 2.0.12

--- a/docs/src/main/asciidoc/security-jwt.adoc
+++ b/docs/src/main/asciidoc/security-jwt.adoc
@@ -296,33 +296,30 @@ nQIDAQAB
 
 === Generating a JWT
 
-Often one obtains a JWT from an identity manager like https://www.keycloak.org/[Keycloak], but for this quickstart we will generate our own using the
-https://bitbucket.org/b_c/jose4j/wiki/Home[Jose4J] library and the TokenUtils class shown in the following listing. Take this source and place it into `security-jwt-quickstart/src/test/java/org/acme/jwt/TokenUtils.java`.
+Often one obtains a JWT from an identity manager like https://www.keycloak.org/[Keycloak], but for this quickstart we will generate our own using the JWT generation API provided by `smallrye-jwt` and the TokenUtils class shown in the following listing. Take this source and place it into `security-jwt-quickstart/src/test/java/org/acme/jwt/TokenUtils.java`.
 
-NOTE: JWT libraries for many different programming languages can be found at the JWT.io website https://jwt.io/#libraries[JWT Libraries].
 
 .JWT utility class
 [source, java]
 ----
 package org.acme.jwt;
 
-import java.io.BufferedReader;
-import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.security.KeyFactory;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.NoSuchAlgorithmException;
 import java.security.PrivateKey;
+import java.security.PublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
+import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.eclipse.microprofile.jwt.Claims;
-import org.jose4j.jws.AlgorithmIdentifiers;
-import org.jose4j.jws.JsonWebSignature;
-import org.jose4j.jwt.JwtClaims;
-import org.jose4j.jwt.NumericDate;
 
+import io.smallrye.jwt.build.Jwt;
+import io.smallrye.jwt.build.JwtClaimsBuilder;
 /**
  * Utilities for generating a JWT for testing
  */
@@ -351,34 +348,16 @@ public class TokenUtils {
     public static String generateTokenString(PrivateKey privateKey, String kid,
         String jsonResName, Map<String, Long> timeClaims) throws Exception {
 
-        JwtClaims claims = JwtClaims.parse(readTokenContent(jsonResName));
+        JwtClaimsBuilder claims = Jwt.claims(jsonResName);
         long currentTimeInSecs = currentTimeInSecs();
-        long exp = timeClaims != null && timeClaims.containsKey(Claims.exp.name())
+        long exp = timeClaims != null && timeClaims.containsKey(Claims.exp.name()) 
             ? timeClaims.get(Claims.exp.name()) : currentTimeInSecs + 300;
 
-        claims.setIssuedAt(NumericDate.fromSeconds(currentTimeInSecs));
-        claims.setClaim(Claims.auth_time.name(), NumericDate.fromSeconds(currentTimeInSecs));
-        claims.setExpirationTime(NumericDate.fromSeconds(exp));
+        claims.issuedAt(currentTimeInSecs);
+        claims.claim(Claims.auth_time.name(), currentTimeInSecs);
+        claims.expiresAt(exp);
 
-        for (Map.Entry<String, Object> entry : claims.getClaimsMap().entrySet()) {
-            System.out.printf("\tAdded claim: %s, value: %s\n", entry.getKey(), entry.getValue());
-        }
-
-        JsonWebSignature jws = new JsonWebSignature();
-        jws.setPayload(claims.toJson());
-        jws.setKey(privateKey);
-        jws.setKeyIdHeaderValue(kid);
-        jws.setHeader("typ", "JWT");
-        jws.setAlgorithmHeaderValue(AlgorithmIdentifiers.RSA_USING_SHA256);
-
-        return jws.getCompactSerialization();
-    }
-
-    private static String readTokenContent(String jsonResName) throws IOException {
-        InputStream contentIS = TokenUtils.class.getResourceAsStream(jsonResName);
-        try (BufferedReader buffer = new BufferedReader(new InputStreamReader(contentIS))) {
-            return buffer.lines().collect(Collectors.joining("\n"));
-        }
+        return claims.jws().signatureKeyId(kid).sign(privateKey);
     }
 
     /**
