docs: update precedence note between ".properties" and ".yaml" config files
The .yaml file (254 ordinal -
https://github.com/quarkusio/quarkus/blob/5db3f0f090b00821db3edf5e30759e3446c20712/extensions/config-yaml/runtime/src/main/java/io/quarkus/config/yaml/runtime/ApplicationYamlProvider.java#L36
) takes precedence over a .properties (250 ordinal -
https://github.com/quarkusio/quarkus/blob/a91a034b855cae3f8d474951cb33e8d05707dc13/core/runtime/src/main/java/io/quarkus/runtime/configuration/ApplicationPropertiesConfigSource.java#L52)
files

--- a/docs/src/main/asciidoc/config.adoc
+++ b/docs/src/main/asciidoc/config.adoc
@@ -603,7 +603,7 @@ First you will need to add the YAML extension to your `pom.xml`:
 Now Quarkus can read YAML configuration files.
 The config directories and priorities are the same as before.
 
-NOTE: Quarkus will choose an `application.properties` over an `application.yaml`.
+NOTE: Quarkus will choose an `application.yaml` over an `application.properties`.
 YAML files are just an alternative way to configure your application.
 You should decide and keep one configuration type to avoid errors.
 
